syntax = "proto3";

package Proj.Proto;
option java_multiple_files = true;
option java_package = "Proj.Services";

import "LocationClaim.proto";


service ClientService{

	rpc receiveLocationClaim(LocationClaim) returns (ClientResponse);
	rpc collectDataFromSensor();	
}
message ClientResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

