syntax = "proto3";

package Proj.Proto;

option java_multiple_files = true;
option java_package = "Proj.Proto";
option java_outer_classname = "LocationClaimProto";


import "signature.proto";
import "Observation.proto";
import "Location.proto";

// definition of the location claim
message LocationClaim{
    string claimId = 1;
	string proverId = 2;
	Location location =3;
    int32 time = 4;
	Observation observation = 5;
}

// signed location claim 
message SignedLocationClaim{
    LocationClaim claim = 1; // claim
	Signature proverSignature = 2; // prover's signature
}
